# screensearch

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCUMENTATION_GUIDE.md  LICENSE  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  WORKFLOW_IMPROVEMENTS.md  build.rs  config.toml
.cargo/: config.toml
.github/workflows/: cross-compile-linux.yml  release.yml
Review/: 12132025.md
docs/: CODE_NAVIGATION.md  PROJECT_INDEX.md  STUBS.md  TODO.md  api-reference.md  architecture.md  commands-summary.md  cross-compilation.md  developer-guide.md  frontend-design-system.md  index.md  performance-optimizations.md  quick-reference.md  security.md  testing.md  user-guide.md
docs/plans/: AI-Vision-System-Plan.md  vLLM-OCR-Plan.md
download-page/: index.html  script.js  styles.css
examples/: check_db.rs  cleanup_db.rs
installer/: screensearch.iss
installer/resources/: README_RESOURCES.md  license.rtf  readme.txt
installer/scripts/: download-model.ps1
screensearch-api/: Cargo.toml  README.md
screensearch-api/examples/: client_usage.rs
screensearch-api/src/: embedded.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  server.rs  state.rs
screensearch-api/src/handlers/: ai.rs  automation.rs  embeddings.rs  generate.rs  mod.rs  rag_helpers.rs  reranker.rs  search.rs  system.rs
screensearch-api/src/workers/: embedding_worker.rs  mod.rs  vision_worker.rs
screensearch-api/tests/: integration_tests.rs
screensearch-automation/: AUTOMATION_IMPLEMENTATION_SUMMARY.md  Cargo.toml  README.md
screensearch-automation/examples/: basic_usage.rs  element_search.rs  mouse_keyboard.rs  notepad_automation.rs
screensearch-automation/src/: element.rs  engine.rs  errors.rs  input.rs  lib.rs  selector.rs  stub.rs  window.rs
screensearch-automation/tests/: integration_tests.rs
screensearch-capture/: Cargo.toml  README.md
screensearch-capture/examples/: ocr_demo.rs
screensearch-capture/src/: capture.rs  frame_diff.rs  lib.rs  monitor.rs  ocr.rs  ocr_processor.rs  window_context.rs
screensearch-db/: Cargo.toml  DATABASE_DESIGN.md
screensearch-db/migrations/: 004_add_embedding_column.sql
screensearch-db/src/: db.rs  lib.rs  migrations.rs  models.rs  queries.rs  vector_search.rs
screensearch-db/tests/: integration_tests.rs
screensearch-embeddings/: Cargo.toml
screensearch-embeddings/src/: chunker.rs  download.rs  engine.rs  lib.rs
screensearch-ui/: .env.example  FEATURES.md  FILE_INDEX.md  Frontend_IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
screensearch-ui/src/: App.tsx  index.css
screensearch-ui/src/api/: ai.ts  client.ts
screensearch-ui/src/components/: AiAssistantPanel.tsx  AiSettings.tsx  AnswerCard.tsx  EmbeddingsStatus.tsx  ErrorBoundary.tsx  Footer.tsx  FrameCard.tsx  FrameModal.tsx  Header.tsx  LoadingSkeleton.tsx  Logo.tsx  ReportGenerator.tsx  SearchBar.tsx  SettingsPanel.tsx  Sidebar.tsx  TagControlTower.tsx  TagManager.tsx  Timeline.tsx
screensearch-ui/src/components/dashboard/: DailyDigestCard.tsx  MemoryStatusGauge.tsx  ProductivityPulse.tsx
screensearch-ui/src/components/search/: ActivityList.tsx  SearchInvite.tsx  SmartAnswer.tsx  SmartAnswerCard.tsx
screensearch-ui/src/components/timeline/: ActivityGraph.tsx
screensearch-ui/src/components/ui/: CircularGauge.tsx  ComingSoonCard.tsx  GlassCard.tsx
screensearch-ui/src/hooks/: useDailyActivity.ts  useFrames.ts  useHealth.ts  useSearch.ts  useSettings.ts  useTags.ts
screensearch-ui/src/lib/: animations.ts  ocrUtils.ts  utils.ts
screensearch-ui/src/pages/: Dashboard.tsx  Intelligence.tsx
screensearch-ui/src/store/: useStore.ts
screensearch-ui/src/types/: index.ts
screensearch-vision/: Cargo.toml
screensearch-vision/src/: client.rs  lib.rs  local_model.rs  models.rs
screensearch-website/: index.tsx
scripts/: build-release.ps1  generate-checksums.ps1  sign-binary.ps1  verify_api.ps1
src/: main.rs  update_checker.rs  version.rs
tests/integration/: test_api_integration.rs  test_end_to_end.rs
